--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
+@import "./flatpicker.css";
+@import "./select2_secondary.css";
+@import "./select2_light.css";
 
 @theme {
     --color-dark: #161616;
@@ -11,485 +14,3 @@
 }
 
 @source "../views";
-
-.flatpickr-calendar {
-    @apply bg-secondary! rounded-[10px]! text-dark! font-montserrat! shadow-lg! p-[5px]! pt-[10px]! w-auto! flex! flex-col! gap-[5px]!;
-}
-
-.dayContainer {
-    @apply gap-[2px]!;
-}
-
-.flatpickr-day {
-    @apply p-[1px]! text-dark! transition-all! duration-200! rounded-[6px]!;
-}
-
-.flatpickr-day.today {
-    @apply border-dark!; /* yellow-400 */
-}
-
-.flatpickr-day.selected,
-.flatpickr-day.startRange,
-.flatpickr-day.endRange {
-    @apply bg-dark! text-secondary! border-dark!;
-}
-
-.flatpickr-day.flatpickr-disabled, .flatpickr-day.flatpickr-disabled:not(.nextMonthDay):hover {
-    @apply bg-secondary/30! text-dark! border-secondary/30! cursor-not-allowed!;
-}
-
-.flatpickr-day.prevMonthDay, .flatpickr-day.nextMonthDay {
-    @apply text-dark/30!; 
-}
-
-.flatpickr-day:not(.flatpickr-disabled):hover {
-    @apply bg-dark/75! text-secondary! border-dark!;
-}
-
-.flatpickr-months {
-    @apply bg-none! font-bold! items-center! text-center! relative!;
-}
-
-.flatpickr-months .flatpickr-next-month, .flatpickr-months .flatpickr-prev-month  {
-    @apply p-[0] static flex items-center hover:bg-dark rounded-[6px] hover:*:fill-secondary! hover:*:text-secondary! transition-all duration-200!;
-}
-
-.flatpickr-weekday {
-    @apply text-dark! font-medium!;
-}
-
-.flatpickr-current-month {
-    @apply pt-[6px]!;
-}
-
-.flatpickr-current-month .flatpickr-monthDropdown-months option {
-    @apply bg-secondary! hover:bg-dark text-dark! font-montserrat!;
-}
-
-.flatpickr-calendar.arrowTop::after, .flatpickr-calendar.arrowTop::before{
-    @apply invisible!;
-}
-
-.flatpickr-time {
-    @apply border-none!;
-}
-
-.flatpickr-hour, .flatpickr-minute {
-    @apply text-dark! font-montserrat! font-medium!;
-}
-
-.flatpickr-hour:focus, .flatpickr-minute:focus {
-    @apply bg-dark/25!;
-}
-
-.select2-container--tailwindcss-3 {
-    @apply block;
-}
-
-/* Dropdown */
-.select2-container--tailwindcss-3.select2-container--open .select2-dropdown {
-    @apply w-full py-1 mt-1 overflow-auto text-base bg-secondary border-none rounded-md shadow-lg max-h-60 ring-1 ring-black/5 focus:outline-none sm:text-sm;
-}
-
-/* Dropdown position */
-.select2-container--tailwindcss-3.select2-container--open .select2-dropdown--below {
-    @apply origin-top;
-}
-
-.select2-container--tailwindcss-3.select2-container--open .select2-dropdown--above {
-    @apply origin-bottom;
-}
-
-/* Search box */
-.select2-container--tailwindcss-3 .select2-search--dropdown .select2-search__field {
-    @apply block w-full px-3 py-1.5 text-base sm:text-sm/6 placeholder-dark border-dark border rounded-md shadow-sm focus:border-dark focus:outline-none focus:ring-1 focus:ring-dark bg-light text-dark;
-}
-
-/* Results container */
-.select2-container--tailwindcss-3 .select2-results__options {
-    @apply overflow-auto max-h-60 border-l-3 border-secondary;
-}
-
-/* Option items */
-.select2-container--tailwindcss-3 .select2-results__option {
-    @apply relative font-medium py-2 pl-3 text-dark transition-colors duration-150 ease-in-out cursor-default select-none pr-9;
-}
-
-/* Disabled option items */
-.select2-container--tailwindcss-3 .select2-results__option--disabled {
-    @apply text-dark/50 cursor-not-allowed bg-secondary border-dark;
-}
-
-/* Hover state */
-.select2-container--tailwindcss-3 .select2-results__option--highlighted {
-    @apply text-dark bg-hovered;
-}
-
-.select2-container--tailwindcss-3 .select2-results__option--highlighted::after {
-    @apply !text-dark;
-}
-
-/* Selected state */
-.select2-container--tailwindcss-3 .select2-results__option--selected {
-    @apply font-bold text-secondary bg-dark;
-}
-
-/* Selected with checkmark */
-/* .select2-container--tailwindcss-3 .select2-results__option--selected::after {
-    @apply absolute inset-y-0 flex items-center text-indigo-600 right-3;
-content: "✓";
-} */
-
-/* Group headers */
-.select2-container--tailwindcss-3 .select2-results__group {
-    @apply flex cursor-default bg-dark px-3 py-1.5 text-xs font-medium uppercase tracking-wider text-dark;
-}
-
-/* Group container */
-.select2-container--tailwindcss-3 .select2-results__option--group {
-    @apply px-0 py-0;
-}
-
-/* Input groups */
-.input-group > * + select + .select2-container--tailwindcss-3 .select2-selection {
-    @apply rounded-l-none border-l-0;
-}
-
-.input-group > .select2-container--tailwindcss-3:not(:last-child) .select2-selection {
-    @apply rounded-r-none border-r-0;
-}
-
-/* Loading state */
-.select2-container--tailwindcss-3 .select2-results__option--loading {
-    @apply flex items-center justify-center py-4 text-gray-400;
-}
-
-/* Loading spinner */
-.select2-container--tailwindcss-3 .select2-results__option--loading::after {
-    @apply w-5 h-5 border-2 border-gray-300 rounded-full animate-spin border-t-indigo-600;
-content: "";
-}
-
-/* Error states */
-.field_with_errors .select2-container--tailwindcss-3 .select2-selection,
-select.is-invalid ~ .select2-container--tailwindcss-3 .select2-selection,
-select:invalid ~ .select2-container--tailwindcss-3 .select2-selection {
-    @apply border-red-500 text-red-900;
-}
-.field_with_errors .select2-container--tailwindcss-3 .select2-container--focus,
-select.is-invalid ~ .select2-container--tailwindcss-3 .select2-container--focus,
-select:invalid ~ .select2-container--tailwindcss-3 .select2-container--focus {
-    @apply ring-red-500 border-red-500;
-}
-.field_with_errors .select2-container--tailwindcss-3 .select2-selection__placeholder,
-select.is-invalid ~ .select2-container--tailwindcss-3 .select2-selection__placeholder,
-select:invalid ~ .select2-container--tailwindcss-3 .select2-selection__placeholder {
-    @apply text-red-300;
-}
-
-/* Single Selection */
-.select2-container--tailwindcss-3 .select2-selection--single {
-    @apply relative w-full !h-auto items-center min-w-[180px] !flex pr-[30px] text-left text-base sm:text-sm/6 transition-colors duration-200 ease-in-out bg-none cursor-pointer;
-}
-
-/* Rendered text */
-.select2-container--tailwindcss-3 .select2-selection--single .select2-selection__rendered {
-    @apply block pl-0 pr-0 text-dark truncate text-base;
-}
-
-/* Placeholder */
-.select2-container--tailwindcss-3 .select2-selection--single .select2-selection__placeholder {
-    @apply text-dark;
-}
-
-/* Arrow container */
-.select2-container--tailwindcss-3 .select2-selection--single .select2-selection__arrow {
-    @apply absolute inset-y-0 right-0 flex items-center pr-2;
-}
-
-/* Arrow */
-.select2-container--tailwindcss-3 .select2-selection--single .select2-selection__arrow b {
-    @apply w-5 h-5 text-dark bg-center bg-no-repeat bg-contain bg-size-[30px];
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%23161616' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
-}
-
-/* Disabled state */
-.select2-container--tailwindcss-3.select2-container--disabled .select2-selection--single {
-    @apply text-gray-500 cursor-not-allowed bg-gray-50 border-gray-200;
-}
-
-.select2-container--tailwindcss-3.select2-container--disabled.select2-container--focus .select2-selection--single {
-    @apply ring-0 border-gray-200;
-}
-
-/* Clear button */
-.select2-container--tailwindcss-3 .select2-selection--single .select2-selection__clear {
-    @apply font-bold absolute inset-y-0 right-0 flex items-center pr-[2rem] !text-[30px] sm:text-sm/6 text-dark cursor-pointer hover:text-dark/75;
-}
-
-/* Focus styles for keyboard navigation */
-.select2-container--tailwindcss-3.select2-container--focus .select2-selection--single {
-    @apply outline-none;
-}
-
-/* RTL Support */
-.select2-container--tailwindcss-3[dir=rtl] .select2-selection--single .select2-selection__rendered {
-    @apply pl-10 pr-3;
-}
-
-/* Multiple selection */
-.select2-container--tailwindcss-3 .select2-selection--multiple {
-    @apply min-h-[2.25rem] h-auto rounded-md text-base sm:text-sm/6 bg-light py-1.5 px-3 border border-gray-300 cursor-default dark:bg-light/5 dark:text-white dark:border-white/10;
-}
-
-/* Multiple selection list */
-.select2-container--tailwindcss-3 .select2-selection--multiple .select2-selection__rendered {
-    @apply flex flex-row flex-wrap gap-2 m-0 p-0 list-none;
-}
-
-/* Multiple selection choices */
-.select2-container--tailwindcss-3 .select2-selection--multiple .select2-selection__choice {
-    @apply inline-flex items-center rounded-md bg-indigo-100 px-2.5 py-0.5 text-base sm:text-sm/6 font-medium text-indigo-800;
-}
-
-/* Remove button */
-.select2-container--tailwindcss-3 .select2-selection--multiple .select2-selection__choice__remove {
-    @apply -ml-1 mr-1.5 h-4 w-4 pb-[0.10rem] items-center flex justify-center rounded-full text-indigo-600 hover:bg-blue-200 hover:text-indigo-900;
-}
-
-/* Search field in multiple selection */
-.select2-container--tailwindcss-3 .select2-selection--multiple .select2-search--inline {
-    @apply block;
-}
-
-.select2-container--tailwindcss-3 .select2-selection--multiple .select2-search--inline .select2-search__field {
-    @apply h-[1.5rem] p-0 m-0 text-base sm:text-sm/6 bg-transparent border-0 focus:outline-none focus:ring-0 dark:placeholder:text-gray-500 placeholder:text-gray-400;
-}
-
-/* Disabled state */
-.select2-container--tailwindcss-3.select2-container--disabled .select2-selection--multiple {
-    @apply text-gray-500 cursor-not-allowed bg-gray-50 border-gray-200 dark:bg-light/20 dark:border-white/5;
-}
-
-.select2-container--tailwindcss-3.select2-container--disabled.select2-container--focus .select2-selection--multiple {
-    @apply ring-0 border-gray-200 dark:border-white/5;
-}
-
-/* Clearable state */
-.select2-container--tailwindcss-3 .select2-selection--multiple.select2-selection--clearable {
-    @apply pr-4;
-}
-
-/* Clear button */
-.select2-container--tailwindcss-3 .select2-selection--multiple .select2-selection__clear {
-    @apply font-bold absolute inset-y-0 right-0 flex items-center pr-4 text-base sm:text-sm/6 text-gray-400 cursor-pointer hover:text-gray-700;
-}
-
-/* Focus styles for keyboard navigation */
-.select2-container--tailwindcss-3.select2-container--focus .select2-selection--multiple {
-    @apply ring-1 ring-indigo-600 border-indigo-600 outline-none;
-}
-
-.select2-container--tailwindcss-2 {
-    @apply block;
-}
-
-/* Dropdown */
-.select2-container--tailwindcss-2.select2-container--open .select2-dropdown {
-    @apply w-full py-1 mt-1 overflow-auto text-base bg-light border-none rounded-md shadow-lg max-h-60 ring-1 ring-black/5 focus:outline-none sm:text-sm;
-}
-
-/* Dropdown position */
-.select2-container--tailwindcss-2.select2-container--open .select2-dropdown--below {
-    @apply origin-top;
-}
-
-.select2-container--tailwindcss-2.select2-container--open .select2-dropdown--above {
-    @apply origin-bottom;
-}
-
-/* Search box */
-.select2-container--tailwindcss-2 .select2-search--dropdown .select2-search__field {
-    @apply block w-full px-3 py-1.5 text-base sm:text-sm/6 placeholder-dark border-dark border rounded-md shadow-sm focus:border-dark focus:outline-none focus:ring-1 focus:ring-dark bg-light text-dark;
-}
-
-/* Results container */
-.select2-container--tailwindcss-2 .select2-results__options {
-    @apply overflow-auto max-h-60 border-secondary;
-}
-
-/* Option items */
-.select2-container--tailwindcss-2 .select2-results__option {
-    @apply relative font-medium py-2 pl-3 text-dark transition-colors duration-150 ease-in-out cursor-default select-none pr-9;
-}
-
-/* Disabled option items */
-.select2-container--tailwindcss-2 .select2-results__option--disabled {
-    @apply text-dark/50 cursor-not-allowed bg-secondary border-dark;
-}
-
-/* Hover state */
-.select2-container--tailwindcss-2 .select2-results__option--highlighted {
-    @apply text-dark bg-hovered;
-}
-
-.select2-container--tailwindcss-2 .select2-results__option--highlighted::after {
-    @apply !text-dark;
-}
-
-/* Selected state */
-.select2-container--tailwindcss-2 .select2-results__option--selected {
-    @apply font-bold text-light bg-dark;
-}
-
-/* Group headers */
-.select2-container--tailwindcss-2 .select2-results__group {
-    @apply flex cursor-default bg-dark px-3 py-1.5 text-xs font-medium uppercase tracking-wider text-dark;
-}
-
-/* Group container */
-.select2-container--tailwindcss-2 .select2-results__option--group {
-    @apply px-0 py-0;
-}
-
-/* Input groups */
-.input-group > * + select + .select2-container--tailwindcss-2 .select2-selection {
-    @apply rounded-l-none border-l-0;
-}
-
-.input-group > .select2-container--tailwindcss-2:not(:last-child) .select2-selection {
-    @apply rounded-r-none border-r-0;
-}
-
-/* Loading state */
-.select2-container--tailwindcss-2 .select2-results__option--loading {
-    @apply flex items-center justify-center py-4 text-gray-400;
-}
-
-/* Loading spinner */
-.select2-container--tailwindcss-2 .select2-results__option--loading::after {
-    @apply w-5 h-5 border-2 border-gray-300 rounded-full animate-spin border-t-indigo-600;
-    content: "";
-}
-
-/* Error states */
-.field_with_errors .select2-container--tailwindcss-2 .select2-selection,
-select.is-invalid ~ .select2-container--tailwindcss-2 .select2-selection,
-select:invalid ~ .select2-container--tailwindcss-2 .select2-selection {
-    @apply border-red-500 text-red-900;
-}
-
-.field_with_errors .select2-container--tailwindcss-2 .select2-container--focus,
-select.is-invalid ~ .select2-container--tailwindcss-2 .select2-container--focus,
-select:invalid ~ .select2-container--tailwindcss-2 .select2-container--focus {
-    @apply ring-red-500 border-red-500;
-}
-
-.field_with_errors .select2-container--tailwindcss-2 .select2-selection__placeholder,
-select.is-invalid ~ .select2-container--tailwindcss-2 .select2-selection__placeholder,
-select:invalid ~ .select2-container--tailwindcss-2 .select2-selection__placeholder {
-    @apply text-red-300;
-}
-
-/* Single Selection */
-.select2-container--tailwindcss-2 .select2-selection--single {
-    @apply relative w-full !h-auto items-center min-w-[180px] !flex pr-[30px] text-left text-base sm:text-sm/6 transition-colors duration-200 ease-in-out bg-light cursor-pointer;
-}
-
-/* Rendered text */
-.select2-container--tailwindcss-2 .select2-selection--single .select2-selection__rendered {
-    @apply block pl-0 pr-0 text-dark truncate text-base;
-}
-
-/* Placeholder */
-.select2-container--tailwindcss-2 .select2-selection--single .select2-selection__placeholder {
-    @apply text-dark;
-}
-
-/* Arrow container */
-.select2-container--tailwindcss-2 .select2-selection--single .select2-selection__arrow {
-    @apply absolute inset-y-0 right-0 flex items-center pr-2;
-}
-
-/* Arrow */
-.select2-container--tailwindcss-2 .select2-selection--single .select2-selection__arrow b {
-    @apply w-5 h-5 text-dark bg-center bg-no-repeat bg-contain bg-size-[30px];
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%23161616' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
-}
-
-/* Disabled state */
-.select2-container--tailwindcss-2.select2-container--disabled .select2-selection--single {
-    @apply text-gray-500 cursor-not-allowed bg-gray-50 border-gray-200;
-}
-
-.select2-container--tailwindcss-2.select2-container--disabled.select2-container--focus .select2-selection--single {
-    @apply ring-0 border-gray-200;
-}
-
-/* Clear button */
-.select2-container--tailwindcss-2 .select2-selection--single .select2-selection__clear {
-    @apply font-bold absolute inset-y-0 right-0 flex items-center pr-[2rem] !text-[30px] sm:text-sm/6 text-dark cursor-pointer hover:text-dark/75;
-}
-
-/* Focus styles for keyboard navigation */
-.select2-container--tailwindcss-2.select2-container--focus .select2-selection--single {
-    @apply outline-none;
-}
-
-/* RTL Support */
-.select2-container--tailwindcss-2[dir=rtl] .select2-selection--single .select2-selection__rendered {
-    @apply pl-10 pr-3;
-}
-
-/* Multiple selection */
-.select2-container--tailwindcss-2 .select2-selection--multiple {
-    @apply min-h-[2.25rem] h-auto rounded-md text-base sm:text-sm/6 bg-light py-1.5 px-3 border border-gray-300 cursor-default dark:bg-light/5 dark:text-white dark:border-white/10;
-}
-
-/* Multiple selection list */
-.select2-container--tailwindcss-2 .select2-selection--multiple .select2-selection__rendered {
-    @apply flex flex-row flex-wrap gap-2 m-0 p-0 list-none;
-}
-
-/* Multiple selection choices */
-.select2-container--tailwindcss-2 .select2-selection--multiple .select2-selection__choice {
-    @apply inline-flex items-center rounded-md bg-indigo-100 px-2.5 py-0.5 text-base sm:text-sm/6 font-medium text-indigo-800;
-}
-
-/* Remove button */
-.select2-container--tailwindcss-2 .select2-selection--multiple .select2-selection__choice__remove {
-    @apply -ml-1 mr-1.5 h-4 w-4 pb-[0.10rem] items-center flex justify-center rounded-full text-indigo-600 hover:bg-blue-200 hover:text-indigo-900;
-}
-
-/* Search field in multiple selection */
-.select2-container--tailwindcss-2 .select2-selection--multiple .select2-search--inline {
-    @apply block;
-}
-
-.select2-container--tailwindcss-2 .select2-selection--multiple .select2-search--inline .select2-search__field {
-    @apply h-[1.5rem] p-0 m-0 text-base sm:text-sm/6 bg-transparent border-0 focus:outline-none focus:ring-0 dark:placeholder:text-gray-500 placeholder:text-gray-400;
-}
-
-/* Disabled state */
-.select2-container--tailwindcss-2.select2-container--disabled .select2-selection--multiple {
-    @apply text-gray-500 cursor-not-allowed bg-gray-50 border-gray-200 dark:bg-light/20 dark:border-white/5;
-}
-
-.select2-container--tailwindcss-2.select2-container--disabled.select2-container--focus .select2-selection--multiple {
-    @apply ring-0 border-gray-200 dark:border-white/5;
-}
-
-/* Clearable state */
-.select2-container--tailwindcss-2 .select2-selection--multiple.select2-selection--clearable {
-    @apply pr-4;
-}
-
-/* Clear button */
-.select2-container--tailwindcss-2 .select2-selection--multiple .select2-selection__clear {
-    @apply font-bold absolute inset-y-0 right-0 flex items-center pr-4 text-base sm:text-sm/6 text-gray-400 cursor-pointer hover:text-gray-700;
-}
-
-/* Focus styles for keyboard navigation */
-.select2-container--tailwindcss-2.select2-container--focus .select2-selection--multiple {
-    @apply ring-1 ring-indigo-600 border-indigo-600 outline-none;
-}
